[gd_scene load_steps=4 format=3 uid="uid://dmx7v8pfull01"]

[ext_resource type="Script" path="res://scripts/screens/MyTeamSetupScreen.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bycwkofopvp5c" path="res://scenes/ui/EmblemPreview.tscn" id="2"]
[ext_resource type="Theme" uid="uid://dv8rowrpphj8g" path="res://themes/MobileTheme.tres" id="3"]

[node name="MyTeamSetupScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "ğŸŸï¸ ì•„ì¹´ë°ë¯¸ ë¸Œëœë”©"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="TeamNameLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "íŒ€ ì´ë¦„ (2-30ì)"

[node name="TeamNameEdit" type="LineEdit" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
placeholder_text = "ì˜ˆ: Yellowhama Academy"
max_length = 30

[node name="NicknameLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "ë³„ëª… (2-15ì)"

[node name="NicknameEdit" type="LineEdit" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
placeholder_text = "ì˜ˆ: Youngsters"
max_length = 15

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="PreviewPanel" type="PanelContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="ScrollContainer/VBoxContainer/PreviewPanel"]
layout_mode = 2

[node name="EmblemPreview" parent="ScrollContainer/VBoxContainer/PreviewPanel/CenterContainer" instance=ExtResource("2")]
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="BackgroundLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "ì— ë¸”ëŸ¼ ë°°ê²½ ì„ íƒ (6ê°€ì§€)"

[node name="BackgroundGrid" type="GridContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="Bg0" type="Button" parent="ScrollContainer/VBoxContainer/BackgroundGrid"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "â¬œ ì‚¬ê°í˜•"

[node name="Bg1" type="Button" parent="ScrollContainer/VBoxContainer/BackgroundGrid"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "â­• ì›í˜•"

[node name="Bg2" type="Button" parent="ScrollContainer/VBoxContainer/BackgroundGrid"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "ğŸ›¡ï¸ ë°©íŒ¨"

[node name="Bg3" type="Button" parent="ScrollContainer/VBoxContainer/BackgroundGrid"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "ğŸ”· ë‹¤ì´ì•„"

[node name="Bg4" type="Button" parent="ScrollContainer/VBoxContainer/BackgroundGrid"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "â­ ë³„"

[node name="Bg5" type="Button" parent="ScrollContainer/VBoxContainer/BackgroundGrid"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "ğŸ”¶ ìœ¡ê°í˜•"

[node name="IconLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "ì— ë¸”ëŸ¼ ì•„ì´ì½˜ ì„ íƒ (20ê°€ì§€)"

[node name="IconGrid" type="GridContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
columns = 5

[node name="Icon0" type="Button" parent="ScrollContainer/VBoxContainer/IconGrid"]
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
text = "âš½ ì¶•êµ¬ê³µ"

[node name="Icon1" type="Button" parent="ScrollContainer/VBoxContainer/IconGrid"]
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
text = "ğŸ¦… ë…ìˆ˜ë¦¬"

[node name="Icon2" type="Button" parent="ScrollContainer/VBoxContainer/IconGrid"]
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
text = "ğŸ¦ ì‚¬ì"

[node name="Icon3" type="Button" parent="ScrollContainer/VBoxContainer/IconGrid"]
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
text = "ğŸ‘‘ ì™•ê´€"

[node name="Icon4" type="Button" parent="ScrollContainer/VBoxContainer/IconGrid"]
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
text = "âš¡ ë²ˆê°œ"

[node name="Icon5" type="Button" parent="ScrollContainer/VBoxContainer/IconGrid"]
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
text = "ğŸ”¥ ë¶ˆê½ƒ"

[node name="Icon6" type="Button" parent="ScrollContainer/VBoxContainer/IconGrid"]
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
text = "ğŸ’ ë‹¤ì´ì•„"

[node name="Icon7" type="Button" parent="ScrollContainer/VBoxContainer/IconGrid"]
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
text = "ğŸŒŸ ë³„ë¹›"

[node name="Icon8" type="Button" parent="ScrollContainer/VBoxContainer/IconGrid"]
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
text = "ğŸ† íŠ¸ë¡œí”¼"

[node name="Icon9" type="Button" parent="ScrollContainer/VBoxContainer/IconGrid"]
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
text = "ğŸ¯ íƒ€ê²Ÿ"

[node name="Icon10" type="Button" parent="ScrollContainer/VBoxContainer/IconGrid"]
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
text = "ğŸš€ ë¡œì¼“"

[node name="Icon11" type="Button" parent="ScrollContainer/VBoxContainer/IconGrid"]
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
text = "ğŸ¦ˆ ìƒì–´"

[node name="Icon12" type="Button" parent="ScrollContainer/VBoxContainer/IconGrid"]
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
text = "ğŸº ëŠ‘ëŒ€"

[node name="Icon13" type="Button" parent="ScrollContainer/VBoxContainer/IconGrid"]
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
text = "ğŸ¦Š ì—¬ìš°"

[node name="Icon14" type="Button" parent="ScrollContainer/VBoxContainer/IconGrid"]
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
text = "ğŸ‰ ìš©"

[node name="Icon15" type="Button" parent="ScrollContainer/VBoxContainer/IconGrid"]
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
text = "ğŸ¦‰ ë¶€ì—‰ì´"

[node name="Icon16" type="Button" parent="ScrollContainer/VBoxContainer/IconGrid"]
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
text = "ğŸ¦… ë§¤"

[node name="Icon17" type="Button" parent="ScrollContainer/VBoxContainer/IconGrid"]
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
text = "ğŸ° ì„±"

[node name="Icon18" type="Button" parent="ScrollContainer/VBoxContainer/IconGrid"]
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
text = "âš”ï¸ ê²€"

[node name="Icon19" type="Button" parent="ScrollContainer/VBoxContainer/IconGrid"]
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
text = "ğŸ›¡ï¸ ë°©íŒ¨"

[node name="HSeparator4" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ColorsLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "íŒ€ ìƒ‰ìƒ"

[node name="ColorsContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PrimaryContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/ColorsContainer"]
layout_mode = 2

[node name="PrimaryLabel" type="Label" parent="ScrollContainer/VBoxContainer/ColorsContainer/PrimaryContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ì£¼ ìƒ‰ìƒ"
horizontal_alignment = 1

[node name="PrimaryColorPicker" type="ColorPickerButton" parent="ScrollContainer/VBoxContainer/ColorsContainer/PrimaryContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
color = Color(1, 0, 0, 1)

[node name="Spacer" type="Control" parent="ScrollContainer/VBoxContainer/ColorsContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="SecondaryContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/ColorsContainer"]
layout_mode = 2

[node name="SecondaryLabel" type="Label" parent="ScrollContainer/VBoxContainer/ColorsContainer/SecondaryContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ë³´ì¡° ìƒ‰ìƒ"
horizontal_alignment = 1

[node name="SecondaryColorPicker" type="ColorPickerButton" parent="ScrollContainer/VBoxContainer/ColorsContainer/SecondaryContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
color = Color(1, 1, 1, 1)

[node name="HSeparator5" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CancelButton" type="Button" parent="ScrollContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "ì·¨ì†Œ"

[node name="Spacer" type="Control" parent="ScrollContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="ScrollContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "ì €ì¥"
